apps/myapp/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend
  namespace: myapp

spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: api
        image: nefor32/myapp:0778a4212d9cb374988ca7e5dcdb0de073aef4f7
        ports:
        - containerPort: 4200
